--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 plugins {
+    id 'org.springframework.boot' version '2.7.13' // Latest 2.7.x version for Java 11
+    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
     id 'java'
-    id 'org.springframework.boot' version '3.2.4'
-    id 'io.spring.dependency-management' version '1.1.4'
 }
-
-group = 'com.apptware'
-version = '0.0.1-SNAPSHOT'
 
 java {
-    sourceCompatibility = '21'
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
 }
+group = 'com.apptware'
+version = '0.0.1-SNAPSHOT'
 
 configurations {
     compileOnly {
@@ -25,6 +25,7 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.14.0'
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
@@ -36,6 +37,7 @@ dependencies {
     testImplementation 'org.assertj:assertj-core:3.25.3'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+
 }
 
 tasks.named('test') {
